# youtube-clip-notes-backend

./: .env  README.md  hello.py  pyproject.toml
app/: main.py
app/core/: config.py
app/db/: crud.py  database.py  models.py
app/routers/: bookmarks.py
app/schemas/: bookmark.py
